...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#76D7C4"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/updateTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateWelcome"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTxtView"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/langBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
...
